Bug 7222 - sky2 throws a lot of "pci express error" in 2.6.18-mm2 on amd64
Summary: sky2 throws a lot of "pci express error" in 2.6.18-mm2 on amd64
Status: RESOLVED PATCH_ALREADY_AVAILABLE
Alias: None
Product: Networking
Classification: Unclassified
Component: Other (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Stephen Hemminger
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-09-28 05:00 UTC by Matthew
Modified: 2006-10-10 09:32 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.18-mm2
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
PCI express error debug info (965 bytes, patch)
2006-09-29 14:44 UTC, Stephen Hemminger
Details | Diff

Description Matthew 2006-09-28 05:00:05 UTC
Most recent kernel where this bug did not occur: 2.6.18-mm1
Distribution: Gentoo Linux
Hardware Environment: Asus P5W DH Deluxe
Software Environment:
Problem Description: kernel throws a lot of "pci express error"s

Steps to reproduce:
compile in sky2 driver in amd64 kernel (2.6.18-mm2),
boot into system => errors appear:

sky2 v1.9 addr 0xebdfc000 irq 19 Yukon-EC (0xb6) rev 2
sky2 eth0: addr 00:17:31:e8:f3:53
ACPI: PCI Interrupt 0000:03:00.0[A] -> GSI 16 (level, low) -> IRQ 16
PCI: Setting latency timer of device 0000:03:00.0 to 64
sky2 v1.9 addr 0xebcfc000 irq 16 Yukon-EC (0xb6) rev 2
sky2 eth1: addr 00:17:31:ee:e4:18
[...]
sky2 0000:04:00.0: pci express error (0x100407)
[...]
sky2 0000:03:00.0: pci express error (0x100407)
[...]
sky2 0000:04:00.0: pci express error (0x500547)
sky2 0000:03:00.0: pci express error (0x500547)
sky2 0000:04:00.0: pci express error (0x500547)
sky2 0000:03:00.0: pci express error (0x500547)
sky2 0000:04:00.0: pci express error (0x500547)
sky2 0000:03:00.0: pci express error (0x500547)
Losing some ticks... checking if CPU frequency changed.
sky2 0000:04:00.0: pci express error (0x500547)
sky2 0000:03:00.0: pci express error (0x500547)

this error occurs during the whole runtime of the kernel ...

I don't know if this severe, so I didn't let that kernel run long ...

network-functionality doesn't seem to be impaired:
ping -c 3 www.google.com
works & I can surf with links -g www.google.com
Comment 1 Andrew Morton 2006-09-28 09:12:31 UTC
On Thu, 28 Sep 2006 05:10:43 -0700
bugme-daemon@bugzilla.kernel.org wrote:

> http://bugzilla.kernel.org/show_bug.cgi?id=7222
> 
>            Summary: sky2 throws a lot of "pci express error" in 2.6.18-mm2
>                     on amd64
>     Kernel Version: 2.6.18-mm2
>             Status: NEW
>           Severity: normal
>              Owner: acme@conectiva.com.br
>          Submitter: jackdachef@gmail.com
> 
> 
> Most recent kernel where this bug did not occur: 2.6.18-mm1
> Distribution: Gentoo Linux
> Hardware Environment: Asus P5W DH Deluxe
> Software Environment:
> Problem Description: kernel throws a lot of "pci express error"s
> 
> Steps to reproduce:
> compile in sky2 driver in amd64 kernel (2.6.18-mm2),
> boot into system => errors appear:
> 
> sky2 v1.9 addr 0xebdfc000 irq 19 Yukon-EC (0xb6) rev 2
> sky2 eth0: addr 00:17:31:e8:f3:53
> ACPI: PCI Interrupt 0000:03:00.0[A] -> GSI 16 (level, low) -> IRQ 16
> PCI: Setting latency timer of device 0000:03:00.0 to 64
> sky2 v1.9 addr 0xebcfc000 irq 16 Yukon-EC (0xb6) rev 2
> sky2 eth1: addr 00:17:31:ee:e4:18
> [...]
> sky2 0000:04:00.0: pci express error (0x100407)
> [...]
> sky2 0000:03:00.0: pci express error (0x100407)
> [...]
> sky2 0000:04:00.0: pci express error (0x500547)
> sky2 0000:03:00.0: pci express error (0x500547)
> sky2 0000:04:00.0: pci express error (0x500547)
> sky2 0000:03:00.0: pci express error (0x500547)
> sky2 0000:04:00.0: pci express error (0x500547)
> sky2 0000:03:00.0: pci express error (0x500547)
> Losing some ticks... checking if CPU frequency changed.
> sky2 0000:04:00.0: pci express error (0x500547)
> sky2 0000:03:00.0: pci express error (0x500547)
> 
> this error occurs during the whole runtime of the kernel ...
> 
> I don't know if this severe, so I didn't let that kernel run long ...
> 
> network-functionality doesn't seem to be impaired:
> ping -c 3 www.google.com
> works & I can surf with links -g www.google.com
> 

I would be suspecting that something went wrong with "[PATCH] sky2: use
standard pci register capabilties for error register".

Comment 2 Matthew 2006-09-29 12:52:53 UTC
sorry for my ignorance, but if I try to patch sky2.c I get the following error:

patching file sky2.c
patch: **** malformed patch at line 5: sky2_write8(hw, B0_CTST, CS_MRST_CLR);

I don't know what to do next (I'm not really experienced with kernel-patching ...)

Thanks in advance
Comment 3 Stephen Hemminger 2006-09-29 14:44:02 UTC
Created attachment 9128 [details]
PCI express error debug info

The following should shut off warning and provide diagnostic info.
Comment 4 Matthew 2006-10-03 03:58:45 UTC
thanks, I'll try it as soon as possible (I'm pretty busy right now)

Comment 5 Matthew 2006-10-07 04:14:21 UTC
thanks, that patch worked for me:

I still get some errors at booting up, but now it's calm ;-)

sky2 pci express found but not extended error support?
sky2 pci express error status register fixed from 0x0 to 0x100
sky2 v1.9 addr 0xebdfc000 irq 19 Yukon-EC (0xb6) rev 2
sky2 eth0: addr 00:17:31:e8:f3:53
sky2 0000:04:00.0: pci express error (0x100000)
ACPI: PCI Interrupt 0000:03:00.0[A] -> GSI 16 (level, low) -> IRQ 16
PCI: Setting latency timer of device 0000:03:00.0 to 64
sky2 pci express found but not extended error support?
sky2 pci express error status register fixed from 0x0 to 0x100
sky2 v1.9 addr 0xebcfc000 irq 16 Yukon-EC (0xb6) rev 2
sky2 eth1: addr 00:17:31:ee:e4:18
sky2 0000:03:00.0: pci express error (0x100000)
Comment 6 Matthew 2006-10-07 04:16:50 UTC
just for your information:
2.6.18-mm3 shows same / similar behavior:

I shortly booted into it some days ago & it seemed that sky2 couldn't be brought
up by dhcpcd 

I'll give it a try again in today or in the next days and let you know ...
Comment 7 Stephen Hemminger 2006-10-10 09:32:56 UTC
Patch submitted, should be in 2.6.19-rc2

Note You need to log in before you can comment on or make changes to this bug.